fixed image stretch bc of 100% width

--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ a:hover {
 .proj_cover {
     grid-row: 2/4;
     grid-column: 1/3;
-    width: 100%;
+    width: 1000px;
 }
 
 .hero {
